--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 canvas { width: 100%; height: 100vh !important; }
 		</style>
 	</head>
-	<body>
+	<body id="body">
 		<script type="text/javascript" src="./tree.js"></script>
         <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 
@@ -82,21 +82,24 @@ scene.add( light );
                }
                if(posx == 0){
                 oppy = oppy==0?1:0;
-               }
-                console.log(posx)
+               } 
                 if(posx==10 || posx==-10){
-                    opp = opp==0?1:0;
-                    console.log(opp)
+                    opp = opp==0?1:0; 
                 }
                 pointLight.position.set(posx,posy,0) 
             }, 100);
 
+var playing = false;
 
-            const listener = new THREE.AudioListener();
+const listener = new THREE.AudioListener();
+var sound = new THREE.Audio( listener );
+var paused = false;
+document.getElementById('body').onclick= (e) =>{
+    if(!playing){
+        playing = true;
 camera.add( listener );
 
 // create a global audio source
-const sound = new THREE.Audio( listener );
 
 // load a sound and set it as the Audio object's buffer
 const audioLoader = new THREE.AudioLoader();
@@ -107,6 +110,20 @@ audioLoader.load( './likeit.mp3', function( buffer ) {
 	sound.play();
 });
 
+    }
+    else{
+        if(!paused){
+        sound.pause();
+        paused = true;
+        }
+        else{
+            sound.play();
+            paused = false;
+        }
+    }
+
+}
+           
 
 			function animate() {
 				requestAnimationFrame( animate );
