--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
 			body { margin: 0; }
             body { margin: 0; }
 canvas { width: 100%; height: 100vh !important; }
+.playbutton{
+    display: block;
+    color: aliceblue;
+    position: absolute;
+    font-weight: bold;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    font-size: 50px;
+    opacity: .7;
+}
 		</style>
 	</head>
 	<body id="body">
+        <div id="playbutton" class="playbutton">Play</div>
 		<script type="text/javascript" src="./tree.js"></script>
         <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 
@@ -70,19 +82,15 @@ scene.add( light );
             // const lightHelp = new THREE.PointLightHelper(pointLight);
             // scene.add(lightHelp)
             setInterval(() => {
-                if(opp==0)
-                {posx+=1; }
-                else 
-               { posx-=1; }
-               if(oppy == 0){
-                posy-=1;
-               }
-               else {
-                posy+=1;
-               }
-               if(posx == 0){
-                oppy = oppy==0?1:0;
-               } 
+                if(opp==0) {posx+=1; }
+                else   { posx-=1; }
+
+                if(oppy == 0){  posy-=1;  }
+                else {  posy+=1;  }
+                
+                if(posx == 0){
+                    oppy = oppy==0?1:0;
+                } 
                 if(posx==10 || posx==-10){
                     opp = opp==0?1:0; 
                 }
@@ -95,21 +103,26 @@ const listener = new THREE.AudioListener();
 var sound = new THREE.Audio( listener );
 var paused = false;
 document.getElementById('body').onclick= (e) =>{
+    if( document.getElementById('playbutton').style.display == 'none'){ 
+        document.getElementById('playbutton').style.display = 'block';
+    }
+    else{
+        document.getElementById('playbutton').style.display = 'none';
+    }
     if(!playing){
         playing = true;
-camera.add( listener );
+        camera.add( listener );
 
-// create a global audio source
+        // create a global audio source
 
-// load a sound and set it as the Audio object's buffer
-const audioLoader = new THREE.AudioLoader();
-audioLoader.load( './likeit.mp3', function( buffer ) {
-	sound.setBuffer( buffer );
-	sound.setLoop(true);
-	sound.setVolume(0.5);
-	sound.play();
-});
-
+        // load a sound and set it as the Audio object's buffer
+        const audioLoader = new THREE.AudioLoader();
+        audioLoader.load( './likeit.mp3', function( buffer ) {
+            sound.setBuffer( buffer );
+            sound.setLoop(true);
+            sound.setVolume(0.5);
+            sound.play();
+        }); 
     }
     else{
         if(!paused){
